# languria

./: .gitignore  Cargo.toml  LICENSE  README.md  project_euler.lgr  test.lgr
src/: boilerplate.rs  errors.rs  evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs  shared.rs
src/environment/: mod.rs
src/environment/value/: mod.rs
src/errors/: mod.rs
src/evaluator/: lib.rs  mod.rs  operation.rs  tests.rs
src/evaluator/operation/: lib.rs  mod.rs
src/lexer/: mod.rs  tests.rs
src/parser/: mod.rs  tests.rs
src/shared/: mod.rs
src/stdlib_modules/: mod.rs
src/stdlib_modules/autoincluded/: mod.rs
src/stdlib_modules/file/: mod.rs
src/user_input/: mod.rs
src/user_io/: mod.rs
stdlib/: association.lgr  string.lgr
tests/: interpret_resources.rs  readme.rs
tests/resources/: associations_lazy_and_eager  nested_fn_scopes.lgr  prime_sieve.lgr  readme.lgr  tagged_prints.lgr  tail_call_recursion.lgr
