[package]
name = "languria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rustyline = "13.0.0"
rand = "0.8.5"
backtrace-on-stack-overflow = "0.3.0"
log = "0.4.20"
env_logger = { version = "0.11.1", features = [] }